--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 body * {
   font-family: "Avenir";
+  box-sizing: border-box;
 }
 body {
   background-color: #e5e5e5;
@@ -21,7 +22,8 @@ h5,
 h6,
 p,
 a,
-button {
+button,
+span {
   font-size: 18px;
   font-weight: 500;
   line-height: 160%;
@@ -37,7 +39,8 @@ button {
   color: #212353;
 }
 
-p {
+p,
+span {
   color: #4b5d68;
 }
 .main {
@@ -47,7 +50,7 @@ p {
 }
 .main * {
   display: flex;
-  padding: 10px;
+  padding: 5px;
 }
 .nav,
 .first,
@@ -56,7 +59,7 @@ p {
 .fourth,
 .footer {
   width: 1224px;
-  margin: 50px;
+  margin: 50px 0px;
 }
 .nav *,
 .first *,
@@ -64,7 +67,7 @@ p {
 .third *,
 .fourth *,
 .footer * {
-  margin: 25px 0;
+  margin: 10px 0px;
 }
 
 a:link,
@@ -199,8 +202,9 @@ a:active {
   line-height: 10%;
 }
 .third_cont {
+  display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .n {
   display: flex;
@@ -209,14 +213,14 @@ a:active {
   border-radius: 50px;
   flex-direction: column;
   align-items: flex-start;
-  clip-path: polygon(26% 0, 100% 0, 100% 100%, 0% 100%);
 }
-.n *{
+.n * {
   padding-left: 150px;
 }
 .n p {
   font-size: 16px;
-
+  width: 90%;
+  height: 80%;
 }
 .n:nth-child(odd) {
   background-color: rgba(104, 201, 186, 0.1);
@@ -224,21 +228,130 @@ a:active {
 .n:nth-child(even) {
   background-color: rgba(156, 105, 226, 0.1);
 }
-.img1{background-image: url(img/7ba1dda1fab4af707def69fa8e4d2a0b.png);}
-.img2{background-image: url(img/6441ecd1919c84f36a65eabdc8138a2c.png);}
-.img3{background-image: url(img/2f3e743d08b2c66de2a7a23d4228df91.png);}
-.img4{background-image: url(img/af78d7add1e7940c7af1b7f896b757e0.png);}
+.img1 {
+  background-image: url(img/7ba1dda1fab4af707def69fa8e4d2a0b.png);
+}
+.img2 {
+  background-image: url(img/6441ecd1919c84f36a65eabdc8138a2c.png);
+}
+.img3 {
+  background-image: url(img/2f3e743d08b2c66de2a7a23d4228df91.png);
+}
+.img4 {
+  background-image: url(img/af78d7add1e7940c7af1b7f896b757e0.png);
+}
 
 .img1,
 .img2,
 .img3,
-.img4{
-  transform: translate(-200px, 20px);
+.img4 {
+  transform: translate(-120px, 20px);
   height: 240px;
   width: 240px;
   position: absolute;
   background-position: center;
   background-repeat: no-repeat;
+}
+/* ----------------------------------------------------------------------------------------- */
+.fourth {
+  flex-direction: column;
+}
+.fourth_main {
+  display: flex;
+  height: 700px;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  border-radius: 50px;
+  background-color: #9c69e2;
+}
+h5 {
+  font-size: 40px;
+  color: #fff;
+}
+.fourth_h {
+  margin: 5% 0% 5% 10%;
+}
+.fourth_person,
+.fourth_menu {
+  margin-left: 10%;
+}
+.person_1,
+.person_2,
+.person_3 {
+  padding: 3rem 3.5rem;
+}
+.person_2_shadow,
+.person_3_shadow {
+  padding: 0;
+  background: linear-gradient(
+    270deg,
+    #ffffff 9.75%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  border-radius: 20px;
+}
+.person_1 {
+  width: 650px;
+  height: 330px;
+  background: #ffffff;
+  box-shadow: 0px 20px 0px rgba(156, 105, 226, 0.3);
+  border-radius: 20px;
+}
+.person_info {
+  flex-direction: column;
+}
+.person_info p,
+.person_info a {
+  padding: 0;
+  margin: 5px;
+}
+.person_info a {
+  font-size: 14px;
+}
+.person_info span {
+  font-size: 17px;
+  inline-size: 110%;
+  line-height: 160%;
+}
+.person_2,
+.person_3 {
+  width: 400px;
+  height: 330px;
+  background-color: #ffffff;
+  border: 1px solid #9c69e2;
+  border-radius: 20px;
+}
+.person_2 {
+  transform: translate(150px);
+}
+.person_2_shadow {
+  position: absolute;
+}
 
-
+.foto_1,
+.foto_2,
+.foto_3 {
+  width: 90px;
+  height: 90px;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.foto_2 {
+  background-position: 50% 20%;
+  background-size: 100%;
+}
+.foto_3 {
+  background-size: contain;
+}
+.foto_1 {
+  background-image: url(img/da4d74b6ffcfa490d831317ff20eb608.jpg);
+}
+.foto_2 {
+  background-image: url(img/14f6cab337299359f974c0425e2feb1b.jpg);
+}
+.foto_3 {
+  background-image: url(img/4c73c7d6d5b8bb74b6664e8e099c3d9b.jpg);
 }
