--- a/style.css
+++ b/style.css
@@ -494,3 +494,10 @@ h6 {
 .fa-comment-dots {
   color: #9c69e2;
 }
+.fa-comment-dots {
+  color: #9c69e2;
+}
+.fa-comment-dots {
+  color: #9c69e2;
+}
+
