--- a/style.css
+++ b/style.css
@@ -6,13 +6,20 @@
   font-family: Avenir;
   src: url(font/AvenirLTStd-Black.otf);
 }
+*{
+  scroll-behavior: smooth;
+}
 body * {
   font-family: "Avenir";
   box-sizing: border-box;
 }
+html,
+body {
+  position: relative;
+  overflow-x: hidden;
+}
 body {
   background-color: #e5e5e5;
-  overflow-x: hidden;
 }
 h1,
 h2,
@@ -42,26 +49,22 @@ p,
 span {
   color: #4b5d68;
 }
-.main div {
-  margin: 5px;
-  padding: 10px;
-}
 .main {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+  width: 100vw;
 }
 .main * {
   display: flex;
 }
-.main .nav,
-.main .first,
-.main .second,
-.main .third,
-.main .fourth,
-.main .footer {
-  width: 1224px;
-  margin: 50px 0;
+.container {
+  display: flex;
+  width: 95%;
+  margin: 0 auto;
+  align-self: center;
+  justify-self: center;
+}
+.container div {
+  margin: 2.5px;
+  padding: 10px;
 }
 
 a:link,
@@ -70,8 +73,7 @@ a:active {
   text-decoration: none;
 }
 /* ----------------------------------------------------------------------------------------- */
-.nav {
-  display: flex;
+.nav .container {
   height: 120px;
   align-items: center;
   justify-content: space-between;
@@ -81,30 +83,48 @@ a:active {
   align-items: center;
   justify-content: space-between;
 }
+.hamburger .bi {
+  font-size: 2rem;
+}
+.demo {
+  display: none;
+}
 .demo_btn {
+  display: none;
   justify-content: center;
   align-items: center;
   align-content: space-around;
-  width: 210px;
+  width: auto;
   background-color: #ffffff;
   box-shadow: 0px 5px 5px rgba(75, 93, 104, 0.1);
   border-color: rgba(255, 255, 255, 0);
   border-radius: 50px;
+  padding: 15px 28px 15px 28px;
+  /* padding-right: 70px; */
+}
+.demo_btn p {
+  font-size: 16px;
+}
+.demo_btn .bi-arrow-right {
+  padding-left: 20px;
+  color: #9c69e2;
+  font-size: 1.8em;
 }
 .figure {
   align-items: flex-end;
 }
 .nav_links {
+  display: none;
   width: 300px;
   justify-content: space-between;
 }
-.smoll {
+.figure_1 {
   width: 20px;
   height: 20px;
   background: #9c69e2;
   border-radius: 20px;
 }
-.smoll2 {
+.figure_2 {
   width: 20px;
   height: 35px;
   background: #f063b8;
@@ -112,12 +132,13 @@ a:active {
 }
 /* ----------------------------------------------------------------------------------------- */
 .first {
-  height: 70vh;
+  display: flex;
+  height: 75vh;
   align-items: center;
 }
 .first_left {
   display: flex;
-  width: 50%;
+  width: 100%;
   height: 80%;
   justify-content: flex-start;
   flex-direction: column;
@@ -126,21 +147,22 @@ a:active {
 
 .first_left h1 {
   font-family: "Helvetica";
-  font-size: 80px;
-  font-weight: 700;
+  font-size: 3rem;
   line-height: 110%;
 }
-.first_left p {
+/* .first_left p {
   width: 60%;
-}
+} */
 .first_btn {
   color: #fff;
   border-radius: 50px;
   border-color: rgba(255, 255, 255, 0);
   background-color: #9c69e2;
+  padding: 10px 20px;
 }
 .first_right {
-  position: absolute;
+  display: none;
+  position: relative;
   width: 885px;
   height: 468px;
   background-image: url(img/039cbccbb3a55ae069a3291f512521c8.png);
@@ -150,82 +172,120 @@ a:active {
 }
 /* ----------------------------------------------------------------------------------------- */
 .second {
-  display: flex;
+  height: 90vh;
+  justify-content: center;
+}
+.second .container {
   background-color: #f063b826;
   border-radius: 50px;
+  flex-direction: column-reverse;
+  /* height: 80%; */
 }
 .second_left {
+  /* display: none; */
   background-image: url(img/d66cbc4f7f6bdeb871119627151a2188.png);
   background-position: center;
   background-size: cover;
-  width: 45%;
+  position: absolute;
+  /* transform: translate(0px, -350px); */
+  opacity: 20%;
   height: 510px;
+  width: 510px;
+  z-index: 98;
 }
 .second_right {
+  z-index: 99;
+  height: auto;
   display: flex;
-  width: 45%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 .second_right h2 {
   font-family: "Helvetica";
-  font-size: 40px;
-  font-weight: 700;
+  font-size: 2.5rem;
   line-height: 52px;
 }
 /* ----------------------------------------------------------------------------------------- */
-.third {
+/* .third {
+  height: 1600px;
+} */
+.third .container {
+  /* display: none; */
   flex-direction: column;
 }
 .third_main {
+  /* height: 30%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 30px;
 }
 
 .third_main p {
   text-align: center;
-  /* width: 70%; */
 }
 .third h3 {
   font-family: "Helvetica";
-  font-size: 40px;
-  font-weight: 700;
-  line-height: 10%;
+  font-size: 3rem;
+  line-height: 52px;
+}
+.third h4 {
+  font-family: "Helvetica";
+  font-size: 1.6rem;
+  line-height: 52px;
 }
 .third_cont {
+  height: 70%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 }
-.third_cont .n {
-  margin: 40px;
-}
-.n {
+div .n {
   display: flex;
-  width: 440px;
-  height: 360px;
   border-radius: 50px;
   flex-direction: column;
   align-items: flex-start;
+  margin: 30px 2.5px 30px 2.5px ;
+}
+div .third_cont {
+  margin: 0;
+  padding: 0;
 }
 .third_cont_1 {
   width: 220px;
-
   flex-direction: column;
 }
 .n p {
   font-size: 16px;
-  width: 90%;
   height: 80%;
 }
-.n:nth-child(odd) {
-  background-color: rgba(104, 201, 186, 0.1);
+
+.background_1 {
+  border: 1px solid #68c9ba21;
+  background-color: #68c9ba18;
+  width: 400px;
+  height: 400px;
 }
-.n:nth-child(even) {
-  background-color: rgba(156, 105, 226, 0.1);
+.background_2 {
+  border: 1px solid #9b69e221;
+  background-color: #9b69e218;
+  width: 400px;
+  height: 400px;
+}
+.background_3 {
+  border: 1px solid #ef61b721;
+  background-color: #ef61b718;
+  width: 400px;
+  height: 400px;
+}
+.background_4 {
+  border: 1px solid #2d9bdb21;
+  background-color: #2d9bdb18;
+  width: 400px;
+  height: 400px;
 }
 .img1 {
   background-image: url(img/7ba1dda1fab4af707def69fa8e4d2a0b.png);
@@ -243,24 +303,31 @@ a:active {
 .img2,
 .img3,
 .img4 {
-  transform: translate(-120px, 20px);
+  z-index: 98;
+  opacity: 20%;
+  transform: translate(50%, 0%);
   height: 240px;
   width: 240px;
   position: absolute;
   background-position: center;
   background-repeat: no-repeat;
 }
-.third_info div {
-  margin-left: 130px;
-}
+
 .third_info {
+  z-index: 99;
   display: flex;
   height: 90%;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+}
+.third_btn{
+  align-items: center;
+  width: 150px;
 }
 /* ----------------------------------------------------------------------------------------- */
 .fourth {
+  display: none;
   flex-direction: column;
 }
 .fourth_main {
@@ -297,7 +364,6 @@ h5 {
   position: absolute;
   width: 400px;
   height: 330px;
-
   background: linear-gradient(
     270deg,
     #ffffff 9.75%,
@@ -404,6 +470,7 @@ h5 {
 }
 /* ----------------------------------------------------------------------------------------- */
 div .line {
+  display: none;
   margin: 0;
   padding: 0;
   height: 1px;
@@ -412,6 +479,7 @@ div .line {
 }
 /* ----------------------------------------------------------------------------------------- */
 .footer {
+  display: none;
   height: 700px;
   flex-direction: column;
 }
@@ -430,12 +498,12 @@ div .line {
   justify-content: space-between;
 }
 .footer_1_right {
+  width: auto;
   align-items: center;
 }
 h6 {
   font-family: "Helvetica";
   font-size: 40px;
-  font-weight: 700;
 }
 .footer_2_1_1,
 .footer_2_2_1,
@@ -448,7 +516,6 @@ h6 {
 .footer_2_2_1 p,
 .footer_2_3_1 p,
 .footer_2_4_1 p {
-  font-weight: 900;
   font-size: 20px;
   color: #212353;
 }
@@ -458,7 +525,6 @@ h6 {
 .footer_2_1_2 p {
   width: 260px;
   font-size: 16px;
-  font-weight: 400;
   line-height: 180%;
 }
 
@@ -501,3 +567,9 @@ h6 {
   color: #9c69e2;
 }
 
+@media screen and (min-width: 940px) {
+  .container {
+    width: 940px;
+    /* margin: 50px 0; */
+  }
+}
