--- a/style.css
+++ b/style.css
@@ -50,18 +50,13 @@ span {
   color: #4b5d68;
 }
 .nav,
-.first,
-.second,
-.third,
 .fourth,
 .line {
   margin-bottom: 50px;
 }
-/* .first,
-.second,
-.fourth {
-  height: 70vh;
-} */
+.third {
+  margin-bottom: 125px;
+}
 .main {
   width: 100vw;
 }
@@ -79,13 +74,11 @@ span {
   margin: 2.5px;
   padding: 10px;
 }
-
 a:link,
 a:visited,
 a:active {
   text-decoration: none;
 }
-/* ----------------------------------------------------------------------------------------- */
 .nav .container {
   height: 120px;
   align-items: center;
@@ -102,10 +95,6 @@ a:active {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-}
-div.figure {
-  padding: 0;
-  margin: 0;
 }
 .hamburger .bi {
   font-size: 2rem;
@@ -124,7 +113,6 @@ div.figure {
   border-color: rgba(255, 255, 255, 0);
   border-radius: 50px;
   padding: 15px 28px 15px 28px;
-  /* padding-right: 70px; */
 }
 .demo_btn p {
   font-size: 16px;
@@ -134,9 +122,7 @@ div.figure {
   color: #9c69e2;
   font-size: 1.8em;
 }
-
 .figure {
-  display: flex;
   align-items: flex-end;
 }
 .nav_links {
@@ -144,19 +130,18 @@ div.figure {
   width: 300px;
   justify-content: space-between;
 }
-.figure_1 {
+.figure .figure_1 {
   width: 20px;
   height: 20px;
   background: #9c69e2;
   border-radius: 20px;
 }
-.figure_2 {
+.figure .figure_2 {
   width: 20px;
   height: 35px;
   background: #f063b8;
   border-radius: 20px;
 }
-/* ----------------------------------------------------------------------------------------- */
 .first {
   display: flex;
   height: 75vh;
@@ -170,15 +155,11 @@ div.figure {
   flex-direction: column;
   align-items: flex-start;
 }
-
 .first_left h1 {
   font-family: "Helvetica";
   font-size: 3rem;
   line-height: 110%;
 }
-/* .first_left p {
-  width: 60%;
-} */
 .first_btn {
   color: #fff;
   border-radius: 50px;
@@ -191,14 +172,11 @@ div.figure {
   position: absolute;
   width: 885px;
   height: 468px;
-  /* background-image: url(img/039cbccbb3a55ae069a3291f512521c8.png); */
   background-position: center;
   background-repeat: no-repeat;
   overflow: visible;
-  /* background-size: cover; */
   transform: translate(-248px, 126px);
 }
-/* ----------------------------------------------------------------------------------------- */
 .second {
   height: 90vh;
   justify-content: center;
@@ -207,15 +185,13 @@ div.figure {
   background-color: #f063b826;
   border-radius: 50px;
   flex-direction: column-reverse;
-  /* height: 80%; */
 }
 .second_left {
-  /* display: none; */
   background-image: url(img/d66cbc4f7f6bdeb871119627151a2188.png);
   background-position: center;
   background-size: cover;
   position: absolute;
-  /* transform: translate(0px, -350px); */
+  justify-self: center;
   opacity: 20%;
   height: 300px;
   width: 300px;
@@ -235,8 +211,6 @@ div.figure {
   font-size: 2.5rem;
   line-height: 52px;
 }
-/* ----------------------------------------------------------------------------------------- */
-
 .third .container {
   flex-direction: column;
 }
@@ -247,7 +221,6 @@ div.figure {
   align-items: center;
   margin-bottom: 30px;
 }
-
 .third_main p {
   text-align: center;
 }
@@ -267,7 +240,9 @@ div.figure {
   flex-wrap: wrap;
   justify-content: center;
 }
-div .n {
+.third_cont .n {
+  width: 95%;
+  height: 353px;
   display: flex;
   border-radius: 50px;
   flex-direction: column;
@@ -286,24 +261,19 @@ div .third_cont {
   font-size: 16px;
   height: 80%;
 }
-
 .background_1 {
-  /* border: 1px solid #68c9ba21; */
   background-color: #68c9ba18;
   aspect-ratio: 1/1;
 }
 .background_2 {
-  /* border: 1px solid #9b69e221; */
   background-color: #9b69e218;
   aspect-ratio: 1/1;
 }
 .background_3 {
-  /* border: 1px solid #ef61b721; */
   background-color: #ef61b718;
   aspect-ratio: 1/1;
 }
 .background_4 {
-  /* border: 1px solid #2d9bdb21; */
   background-color: #2d9bdb18;
   aspect-ratio: 1/1;
 }
@@ -332,7 +302,6 @@ div .third_cont {
   background-position: center;
   background-repeat: no-repeat;
 }
-
 .third_info {
   z-index: 99;
   display: flex;
@@ -350,6 +319,7 @@ div .third_cont {
 }
 /* ----------------------------------------------------------------------------------------- */
 .fourth {
+  height: 90vh;
   flex-direction: column;
 }
 .fourth .container {
@@ -361,14 +331,12 @@ div .third_cont {
   border-radius: 50px;
   background-color: #9c69e2;
 }
-
 h5 {
   font-family: Helvetica;
   justify-content: center;
   font-size: 40px;
   color: #fff;
 }
-
 .fourth_person,
 .fourth_menu {
   flex-direction: column;
@@ -503,7 +471,6 @@ h5 {
   color: #fff;
   font-size: 2rem;
 }
-/* ----------------------------------------------------------------------------------------- */
 div .line {
   margin: 0;
   padding: 0;
@@ -511,7 +478,6 @@ div .line {
   width: 100%;
   background-color: #9c69e2;
 }
-/* ----------------------------------------------------------------------------------------- */
 .footer {
   flex-direction: column;
 }
@@ -566,6 +532,10 @@ h6 {
 }
 .figure {
   flex-direction: row;
+}
+.footer_2_1 {
+  width: 60%;
+  align-items: center;
 }
 .footer_2_1_1 {
   flex-direction: row;
@@ -623,9 +593,33 @@ h6 {
   color: #9c69e2;
 }
 
+@media screen and (min-width: 760px) {
+  .second .container {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .second_left {
+    position: relative;
+    opacity: 100%;
+    width: 381.6px;
+    height: 404px;
+  }
+  .third_cont .n {
+    width: 354px;
+    height: 353px;
+  }
+  /* .footer_2_1{
+    width: 60%;
+  } */
+}
+
 @media screen and (min-width: 1024px) {
   .container {
     width: 1024px;
+  }
+  .container div {
+    padding: 0;
   }
   .demo,
   .demo_btn,
@@ -658,28 +652,31 @@ h6 {
     flex-direction: row;
   }
   .second_left {
-    position: relative;
-    opacity: 100%;
     width: 477px;
     height: 504px;
   }
-  .second_right {
+  .container .second_right {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     width: 55%;
     text-align: left;
+    margin: 80px 0;
   }
   .third .container {
     align-items: center;
   }
-  .third_main {
+  .container .third_main {
+    margin: 70px 0;
     width: 65%;
+  }
+  .container .third_main div {
+    margin: 20px 0;
   }
   .third_cont {
     justify-content: space-between;
     align-content: space-between;
   }
-  .n {
+  .third_cont .n {
     width: 442px;
     height: 358px;
   }
@@ -699,7 +696,6 @@ h6 {
   .background_2,
   .background_3,
   .background_4 {
-    /* border-color: #ffffff00; */
     background-color: #ffffff00;
     background-size: cover;
     background-repeat: no-repeat;
@@ -716,13 +712,13 @@ h6 {
   }
   .background_4 {
     background-image: url(img/4.png);
-    background-repeat: ;
   }
   .n .third_info {
+    display: flex;
     margin-left: 130px;
     align-content: center;
     align-items: stretch;
-    justify-content: center;
+    justify-content: space-evenly;
   }
   .fourth .container {
     align-items: flex-start;
@@ -757,12 +753,10 @@ h6 {
   .person_3 {
     transform: translate(25px);
   }
-
   .person_info {
     width: 65%;
     align-items: flex-start;
   }
-
   .person_info span {
     align-items: flex-start;
     text-align: left;
@@ -772,7 +766,6 @@ h6 {
   }
   .fourth_menu {
     flex-direction: row;
-
     width: 85%;
   }
   .big_circle {
@@ -782,5 +775,55 @@ h6 {
   .white_circle {
     width: 5px;
     height: 5px;
+  }
+  .footer .container * {
+    text-align: left;
+    width: auto;
+  }
+  .container .footer_1,
+  .footer_1_right {
+    justify-content: space-between;
+    align-items: center;
+  }
+  .container .footer_2 {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+  div.footer_1,
+  div.footer_3 {
+    margin: 60px 2.5px;
+  }
+  .footer_2 {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .footer_2 .footer_2_1 {
+    width: 35%;
+  }
+  .footer_2_1,
+  .footer_1_left,
+  .footer_2_4 {
+    width: auto;
+    align-items: flex-start;
+  }
+  .footer_1_right .demo_btn {
+    flex-direction: row;
+  }
+  .footer_1_right .first_btn {
+    background-color: #f063b8;
+  }
+  .footer_3 .footer_3_1 * {
+    width: 60%;
+  }
+  .container .footer_3 {
+    display: flex;
+    flex-direction: row;
+  }
+  .figure .figure_1,
+  .figure .figure_2 {
+    width: 20px;
+  }
+  .footer_2_1_1 .figure{
+    margin-right: 20px;
   }
 }
