--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+@import url('http://fonts.cdnfonts.com/css/avenir');
+@import url('http://fonts.cdnfonts.com/css/helvetica-neue-9');
+
 html,
 button {
-  font-family: "Avenir";
+  font-family: 'Avenir', 'Helvetica Neue';
 }
 * {
   scroll-behavior: smooth;
@@ -27,7 +30,7 @@ a,
 button,
 span {
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 160%;
 }
 h1,
@@ -154,7 +157,8 @@ div.figure{
   align-items: flex-start;
 }
 .first_left h1 {
-  font-family: "Helvetica";
+  font-family: 'Helvetica Neue';
+  
   font-size: 3rem;
   line-height: 110%;
 }
@@ -205,7 +209,7 @@ div.figure{
   text-align: center;
 }
 .second_right h2 {
-  font-family: "Helvetica";
+  font-family: 'Helvetica Neue';
   font-size: 2.5rem;
   line-height: 52px;
 }
@@ -223,12 +227,12 @@ div.figure{
   text-align: center;
 }
 .third h3 {
-  font-family: "Helvetica";
+  font-family: 'Helvetica Neue';
   font-size: 3rem;
   line-height: 52px;
 }
 .third h4 {
-  font-family: "Helvetica";
+  font-family: 'Helvetica Neue';
   font-size: 1.6rem;
   line-height: 52px;
 }
@@ -330,7 +334,7 @@ div .third_cont {
   background-color: #9c69e2;
 }
 h5 {
-  font-family: Helvetica;
+  font-family: 'Helvetica Neue';
   justify-content: center;
   font-size: 40px;
   color: #fff;
@@ -505,7 +509,7 @@ div .line {
   align-items: center;
 }
 h6 {
-  font-family: "Helvetica";
+  font-family: 'Helvetica Neue';
   font-size: 40px;
 }
 .footer_2_1_1 p,
@@ -716,6 +720,10 @@ h6 {
     align-content: center;
     align-items: stretch;
     justify-content: space-evenly;
+  }
+  .third_info p{
+    width: 90%;
+
   }
   .fourth .container {
     align-items: flex-start;
