--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 html,
 button {
-  font-family: 'Avenir', 'Helvetica Neue';
+  font-family: 'Avenir', 'Helvetica Neue', sans-serif;
 }
 * {
   scroll-behavior: smooth;
